    - Abort on EOF in patch name prompt in Dpkg::Source::Package::V2,
      instead of getting into an infinite loop. Closes: #851441
    - Call anonymous subs via -> operator instead of casting with &, and fix
      bogus POD documentation to match the code.
    - Add new Auto-Built-Package field to Dpkg::Control::Fields.
    - Add a new debug() reporting function, and switch code to use it.
  * Documentation:
    - Cleanup software requirements in README.
    - Move control member file references from dpkg(1) to deb(5).
    - Fix typos in docs and code comments.
    - Document Auto-Built-Package field in deb-control(5).
  * Build system:
    - Disable disk pre-allocation by default, but let the builder re-enable
      it via a new configure option. This has been causing major performance
      issues on "modern" filesystems.
  * Packaging:
    - Add debsig-verify to dpkg Suggests. The code optionally supports this
      specific signed .deb verification program.
      Prompted by Stuart Prescott <stuart@debian.org>.
  * Test suite:
    - Generate and check all currently possible architecture wildcards.
    - Correctly iterate over all default and passed .dsc template substvars.

  [ Updated programs translations ]
  * Dutch (Frans Spiesschaert). Closes: #851889
  * German (Sven Joachim).

  [ Updated scripts translations ]
  * German (Helge Kreutzmann).

  [ Updated man pages translations ]
  * Dutch (Frans Spiesschaer). Closes: #851891
  * German (Helge Kreutzmann).

 -- Guillem Jover <guillem@debian.org>  Tue, 20 Dec 2016 14:30:31 +0100

dpkg (1.18.18) unstable; urgency=medium

  [ Guillem Jover ]
  * Documentation:
    - Document DPKG_DATADIR in an ENVIRONMENT section in dpkg-architecture(1).
    - Add a rationale for the purpose of Testsuite-Triggers in dsc(5).
      Prompted by Mattia Rizzolo <mattia@debian.org>.
  * Packaging:
    - Revert the perl to perl:any dependency change in libdpkg-perl, as that