@@ -34,6 +34,8 @@ dpkg (1.18.19) UNRELEASED; urgency=medium
       bogus POD documentation to match the code.
     - Add new Auto-Built-Package field to Dpkg::Control::Fields.
     - Add a new debug() reporting function, and switch code to use it.
+    - Add new Dpkg::BuildOption parse_features() method refactored from
+      Dpkg::Vendor::Debian.
   * Documentation:
     - Cleanup software requirements in README.
     - Move control member file references from dpkg(1) to deb(5).
